--- a/order/configs/config.yaml
+++ b/order/configs/config.yaml
@@ -8,7 +8,7 @@ server:
 data:
   database:
     driver: mysql
-    source: root:root@tcp(127.0.0.1:3306)/test
+    source: aplum:123456@tcp(127.0.0.1:3306)/aplum
   redis:
     addr: 127.0.0.1:6379
     read_timeout: 0.2s
