--- a/order/configs/config.yaml
+++ b/order/configs/config.yaml
@@ -5,11 +5,18 @@ server:
   grpc:
     addr: 0.0.0.0:9000
     timeout: 1s
+  name: "order-srv"
 data:
   database:
     driver: mysql
-    source: aplum:123456@tcp(127.0.0.1:3306)/aplum
+    source: root:123456@tcp(192.168.107.160:3306)/aplum
   redis:
     addr: 127.0.0.1:6379
     read_timeout: 0.2s
     write_timeout: 0.2s
+
+registry:
+  consul:
+    addr: 192.168.107.160:8500
+    schema: http
+
